--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -18,6 +18,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/22/n11674519.md#1" target="_blank">中国出生人口两年断崖式下跌 经济续衰退</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/22/n11674519.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/4f1eb50ab827ca4fc63c97322f4e7ec5-150x120.jpg" align ="left"></a>中共结束一胎化政策后，年轻人却在沉重经济压力下不愿多生小孩，出生率反下跌，官方2018年的出生率是历史新低。有民间机构估算，2019年出生人口将再创1949年来最低。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 1:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/22/n11674012.md#1" target="_blank">昆大学生诉中领事徐杰案开庭 法庭发传票</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/22/n11674012.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-22-17009-Drew-participating-in-Hong-Kong-Students-Protests-150x120.jpg" align ="left"></a>澳洲昆州大学学生帕夫洛（Drew Pavlou）起诉中共驻布里斯本总领事徐杰一案11月22日（周五）上午在昆州地方法院开庭。徐杰本人未出庭，亦未指派法律代表到场，法庭向被告及相关机构发出传票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/20/n11668740.md#1" target="_blank">在京截访人员私闯民宅被砍成重伤（慎入）</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/20/n11668740.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/page-4-150x120.jpg" align ="left"></a>10月13日早上，北京市丰台区王佐镇河西村一处出租房内，突然闯入十余名截访人员，将访民陈宏伟抓住，陈受到惊吓时胡乱操起身边的一把刀，将一截访男子砍伤，血肉模糊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 2:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/29/n11688779.md#1" target="_blank">每日三退声明精选（2019/11/28）</a><br></h3>本人在二十多岁时入党，因年轻无知，对共产党的面目认识不清。随着年龄渐长，尤其出国以后，获得更多资讯，了解到该党对西藏人、新疆人、香港人以及部分大陆人的所作所为，对人权的侵害怵目惊心。我为自己是该党成员感到羞耻。我声明，自2019年11月28日起，本人自愿退出共产党，不再是该党成员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/28/n11686830.md#1" target="_blank">班级装饮水机 河南一中学收50元“喝水费”</a><br></h3>学校的班级里装饮水机，本是件方便学生喝水的好事。然而近日，河南省鹿邑县唐集乡中学被曝向学生收取“喝水费”。据了解，收费从今年上半学期就已开始，到了今年秋季开学则变成强制性收费，每位学生每学期被收取50元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/28/n11686097.md#1" target="_blank">每日三退声明精选（2019/11/27）</a><br></h3>小学五年级入团，研究生毕业那年入党，因为厌恶体制内工作远离家乡来到大都市打工。对于我来说一直都是离党和组织有着很遥远的距离。今年发生了很多事情，让我更清楚认识到这个组织的邪恶，他是人类最大的威胁，我们一定要远离他，打败他。无意间发现三退的网站，毫不犹豫选择，今天声明本人退出中国共产党党组织，成为一个人自由人！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 11:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/27/n11683659.md#1" target="_blank">每日三退声明精选（2019/11/26）</a><br></h3>前几年一桩冤案降临到自己头上，结合现在在外网了解的一切才真正认识到了中共高层及其官僚的邪恶本质，中共篡政70年以来，一直在用谎言与暴政欺骗奴役压榨中国人民，垄断一切公共资源盘剥中国人民。其公检法司暴力机构基本都是中共的整人掠财帮凶，他们办案基本都是乱作为、毫无底线与人性，以抢劫财富为目的，施以恐吓、引诱、欺骗、刑讯逼供等手段，并强迫受害者必须按照他们事先编排.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:12 AM							</td></tr>
@@ -34,13 +35,5 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/23/n11675439.md#1" target="_blank">每日三退声明精选（2019/11/22）</a><br></h3>不再被共党邪灵蒙蔽，共产党满口“伟光正、假大空”，所作所为却都是欺骗与迫害老百姓为害人类，天灭中共，没有共产党才有民主中国！才有每一个家庭的安全与幸福！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 10:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/22/n11673018.md#1" target="_blank">每日三退声明精选（2019/11/21）</a><br></h3>十年前我第一次开始了解中共统治真相后一直忍气吞声默默忍受着，但现在看到中共在新疆、在香港以及对宗教律师团体的残酷迫害，我无法允许自己在沉默下去，在此我声明退出参加加入的中共少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/21/n11670314.md#1" target="_blank">每日三退声明精选（2019/11/20）</a><br></h3>自共匪邪教建政一来一直被共匪思想洗脑，到现在才彻底看清红色暴政，看到大陆?层受尽压迫和财产剥夺，香港民主运动无人性的暴力血腥震压心里说不出什么滋味，一个卖国的邪党还天天叫人民爱党爱国变态至极，自己思想卖国引进马列思想，行为卖国送掉中国无数国土还残杀无数中国人民，真是人间魔鬼，早晚会下地狱，为了远离邪恶，我申请退出小时候不知加入的少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 10:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/20/n11667707.md#1" target="_blank">每日三退声明精选（2019/11/19）</a><br></h3>中共暴行甲天下，戾暴恶行人人骂。
-衣冠禽兽伪君子，香港暴行上演了。
-和平请愿，被抓被打被杀；
-舆论造假，把香港同胞丑化；
-中共暴行，曝光天下。
-香港同胞，英勇可嘉。
-悲愤之余，教师真话。
-退团退队，不被恶党绑架。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fxikhp286/djy/blob/master/gb/ncid282_4.md#1<br><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/ncid282_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_4.htm">http://www.epochtimes.com/gb/ncid282_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
