--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -1,5 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11695531.md#1" target="_blank">许其正：笛音</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11695531.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/346078-150x120.jpg" align ="left"></a>看见林投了，就在防风林那边，成丛成堆地。  笛音便在我心中响起童年的曲调。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 9:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/28/n11688048.md#1" target="_blank">民国军阀见证奇迹：暮春祈雪 人体自化</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/28/n11688048.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1502241444542483-150x120.jpg" align ="left"></a>民国十三年三月二十九日，云南僧人具行披上袈裟，跏趺坐在干禾秆上，他左手拿着引磬，右手敲着木鱼，面向西方念着佛号，突然身体自放火光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11700046.md#1" target="_blank">【爸妈必修课】让孩子安心入睡 从谈天拥抱开始</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11700046.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Tu1_shutterstock_660631528-150x120.jpg" align ="left"></a>东西，我为什么要走呢？我不建议家长一直用奖赏、处罚，或者威胁的方式对待孩子。这样的话，家长以后会非常辛苦。
 入睡前给孩子安心的感觉
@@ -26,7 +25,6 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/1/n11491428.md#1" target="_blank">【医案】横看成岭侧成峰</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/1/n11491428.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/20190901-shuhuaqiu-lian-hua-01-150x120.jpg" align ="left"></a>当苏东坡在饱览庐山千姿百态的奇绝后，在西林寺墙壁上题了一首千古流传的名诗：“横看成岭侧成峰，远近高低各不同。不识庐山真面目，只缘身在此山中。”当人在看人的外型时，也会因为角度不同而有天壤之别。不知道有多少人在夜幕低垂时，为自己相貌饮恨啜泣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:16 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/29/n11688710.md#1" target="_blank">天地清明引(124) 明光殒－明光无华2</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/29/n11688710.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1502131349102483-150x120.jpg" align ="left"></a>白门柳多日未归，傲霜枝遵照景阳之令，与众人商议后，决定再次召开武林大会，揭破武林杀人悬案真凶。是日，光明顶殃云聚集，阴风阵阵，武林中人齐聚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/27/n11685002.md#1" target="_blank">善识人且能让贤 先秦著名卿相背后的伯乐</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/27/n11685002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/05/605150650401734-150x120.jpg" align ="left"></a>一个国家能否治理得好，不仅在于君王，也离不开辅佐君主的贤人。春秋时期，有一天鲁哀公问孔子：“要怎么做才能使老百姓心服呢？”孔子的回答是：“把正直的人选拔出来，放在邪曲的人之上。若是把邪曲的人选拔出来放在正直的人之上，百姓就不会心服了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:06 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11695162.md#1" target="_blank">唐浩：聚心</a><br></h3>穿云万里腾   孤帆四海征   晨昏诉真相   正气天地成......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 12:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11695159.md#1" target="_blank">唐浩：选贤与能</a><br></h3>贤能伪善隐一线   繁茂落归决一念   赤霾迷尘相难辨   德鉴众性良知间......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/25/n11679876.md#1" target="_blank">麦立：爱上天空</a><br></h3> 一朵小花立愿 要开在蓝天里 要开在最高处  天天默默地祈祷 天天默默地努力......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693393.md#1" target="_blank">五律：荒凉</a><br></h3> 繁华冬日碎， 未世道衰无。 水落沙洲出， 风干乱石枯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:11 PM			</td></tr>
@@ -34,5 +32,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693392.md#1" target="_blank">诗歌：遥望</a><br></h3>冷寂寒冬里， 长河独远巡。 风吹枯叶尽， 水结薄冰新。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693686.md#1" target="_blank">诗歌：无题</a><br></h3>萧萧西风过北疆 瑟瑟寒枝落尽芳 千载沧桑浑一梦 夜阑卧听雨打窗......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11695164.md#1" target="_blank">唐浩：史诗</a><br></h3>正气摇天笔   良知催泪滴   丹血舞神墨   青史留胜迹......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 6:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693115.md#1" target="_blank">五律：鼓</a><br></h3>洪声迈气扬，号令发轩黄。 万道雷霆势，千春日月光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:12 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/1/n11693109.md#1" target="_blank">调笑令．法舟彼岸</a><br></h3>天路， 天路， 佛度人间梯竖。 风云世事无常， 坚信纯真善良。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fxikhp286/djy/blob/master/gb/news2007_4.md#1<br><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/news2007_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_4.htm">http://www.epochtimes.com/gb/news2007_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
